# Gstreamer_Object_Detection_Pipeline

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test.cpp
include/: inference_engine.hpp  timer.hpp  video_reader.hpp  video_writer.hpp
scripts/: pt_to_onnx_export.py
src/: Video_Read_and_Render.cpp  convert_to_engine.cpp  inference_engine.cpp  main.cpp  trt_cuda_graph.cpp  video_reader.cpp  video_writer.cpp
